--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "async": "^3.2.4",
     "autoprefixer": "^10.4.13",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -17,6 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
