--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
     "prettier": "^2.8.4",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "valid-url": "^1.0.9"
   },
   "name": "speakeasysite",
   "version": "1.0.0",
