--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
     "prettier": "^2.8.4",
+    "social-network-detector": "^1.0.1",
     "tailwindcss": "^3.2.7",
     "valid-url": "^1.0.9"
   },
