--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.9.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "netlify-lambda": "^2.0.16",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
@@ -26,6 +27,7 @@
     "postcss": "^8.4.21",
     "postcss-cli": "^10.1.0",
     "prettier": "^2.8.4",
+    "serverless-http": "^3.1.1",
     "social-network-detector": "^1.0.1",
     "tailwindcss": "^3.2.7",
     "valid-url": "^1.0.9"
@@ -37,7 +39,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "postcss public/stylesheets/tailwind.css -o public/stylesheets/style.css",
-    "devstart": "npm run build:css && nodemon ./bin/www"
+    "devstart": "npm run build:css && nodemon ./bin/www",
+    "netlifyStart": "./node_modules/.bin/netlify-lambda serve src",
+    "netlifyBuild": "./node_modules/.bin/netlify-lambda build src",
+    "start": "nodemon ./bin/www"
   },
   "author": "Albert Hu",
   "license": "ISC"
