--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "devstart": "npm run build:css && nodemon ./bin/www",
     "netlifyStart": "./node_modules/.bin/netlify-lambda serve src",
     "netlifyBuild": "./node_modules/.bin/netlify-lambda build src",
-    "start": "nodemon ./bin/www"
+    "start": "node app.js"
   },
   "author": "Albert Hu",
   "license": "ISC"
